@@ -13,7 +13,9 @@ solve.qr <- function(a, b, ...)
     return(qr.coef(a, b))
 }
 
-solve.default <- function(a, b, tol = 1e-7, LINPACK = FALSE, ...)
+solve.default <-
+    function(a, b, tol = ifelse(LINPACK, 1e-7, .Machine$double.eps),
+             LINPACK = FALSE, ...)
 {
     if(is.complex(a) || (!missing(b) && is.complex(b))) {
         a <- as.matrix(a)
@@ -32,6 +34,7 @@ solve.default <- function(a, b, tol = 1e-7, LINPACK = FALSE, ...)
         warning("solve.default called with a qr object: use qr.solve")
         return(solve.qr(a, b, tol))
     }
+    
     if(!LINPACK) {
         a <- as.matrix(a)
         if(missing(b)) {
@@ -41,9 +44,9 @@ solve.default <- function(a, b, tol = 1e-7, LINPACK = FALSE, ...)
         storage.mode(a) <- "double"
         return (if (is.matrix(b)) {
             rownames(b) <- colnames(a)
-	    .Call("La_dgesv", a, b, PACKAGE = "base")
+	    .Call("La_dgesv", a, b, tol, PACKAGE = "base")
 	} else
-	    drop(.Call("La_dgesv", a, as.matrix(b), PACKAGE = "base")))
+	    drop(.Call("La_dgesv", a, as.matrix(b), tol, PACKAGE = "base")))
     }
     a <- qr(a, tol = tol)
     nc <- ncol(a$qr)
